# weekmenu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  Weekmenu extravaganza v2.xlsm  dbdiagram.txt  docker-compose.yml  grocery.html  pyproject.toml  weekmenu.html
.cursor/rules/: about-project.mdc  backend.mdc  (+6 more)
scripts/: build_catalog_nl.py  cleanup_default_flags.py  clear_todo_descriptions.py  format_css.py  migrate_sqlite_to_postgres.py  restore_database.py  setup_public_deploy.sh  setup_tailscale_serve.sh
src/: __init__.py  admin_info.py  admin_translations.py  app.py  auth.py  catalog.py  database.py  db_config.py  grocery.py  ingredient_merge.py  ingredient_units.py  invite_users.py  log_utils.py  models.py  plan_store.py  recipe_image.py  shops.py  template_utils.py  units.py  url_path.py  user_settings.py  week_menu.py  weekly_groceries.py
tests/: conftest.py  test_admin_info.py  test_admin_translations.py  test_app.py  test_auth.py  test_catalog_isolation.py  test_db_isolation.py  test_edit_ingredient.py  test_flash_messages.py  test_grocery_list.py  test_grocery_shops.py  test_i18n.py  test_ingredient_merge.py  test_ingredient_unit_merge.py  test_manage_shops.py  test_manage_units.py  test_migrations.py  test_recipe_display.py  test_recipe_image.py  test_recipe_owner.py  test_recipe_search.py  test_recipe_tags.py  test_recipes_missing_description.py  test_recipes_missing_tags.py  test_template_utils.py  test_user_isolation.py  test_week_menu.py  test_weekly_groceries.py  test_weekly_grocery_helpers.py
(+110 files in other folders)
